# volta-zk

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  c3-e2e-results.md  pyproject.toml
.claude/: settings.json  settings.local.json.tmp.842925.0b73f702eccd  settings.local.json.tmp.842925.62f19ac7b03b
artifact/p7/: hardware-a100.json
benchmarks/: README.md
benchmarks/results/: c1-2026-07-15-2a3d731.json  c3-table-a100-2026-07-17-5a2edbe.json  c3-table-a100-real-2026-07-17-5a2edbe.json  c3-table-cpu-2026-07-17-5a2edbe.json  c3-table-cpu-real-2026-07-17-5a2edbe.json  c3b-a100-realpcg-v3-2026-07-18-161fc59.json  c3b-cpu-real-2026-07-18-161fc59.json  c3b-cupti-kernel-census-2026-07-18-5a2edbe.json  c3b-g3-2026-07-18-161fc59.json  c3b-l4-ablation-diagnostic-2026-07-18-5a2edbe.json  c3b-postimpl-cupti-kernel-census-2026-07-18-161fc59.json  fase-d-2026-07-16-cad1c09.json  fase-d-connection-2026-07-16-877411b.json  fase-d-scale110m-2026-07-16-cad1c09.json  fase-d-scale600m-2026-07-16-877411b.json  flip-readiness-2026-07-15-117df7d.json  p1-2026-07-03-5113243.json  p1-2026-07-11-64a8ead.json  p2.5-2026-07-04-a13cca4.json  p3-2026-07-04-cef997d.json  p3.5-2026-07-04-1708c66.json  p3.5-quick-2026-07-04-1708c66.json  p4-2026-07-05-8768fc4.json  p4-2026-07-06-8b4ca11.json  p4-quick-2026-07-05-8768fc4.json  p5-2026-07-06-c03be09.json  p5-2026-07-06-e52ce79.json  p5-2026-07-07-9a19662.json  p5-quick-2026-07-06-3491003.json  p6-2026-07-07-382bb56.json  (+125 more)
cuda/: p7_blake3_merkle.cu  p7_fused_epilogue.cu  p7_goldilocks_roofline.cu  p7_logup_blind_rounds.cu  p7_logup_rounds.cu  p7_logup_tree.cu  p7_native_inference.cu  p7_pcs_arithmetic.cu  p7b_chacha8_fp_diff.cu  p7b_thunder_cuda_rtt.cu  volta_chacha8_fp.cuh  volta_cuda_backend.cu
docs/: benchmark-plan.md  c1-response-communication-design.md  c2-packed-lane-pcg-design.md  c3-pcs-communication-design.md  concept-note.md  fase-d-g4-sync-gate-amendment.md  fase-d-realpcg-default-design.md  literature-sweep.md  p7-artifact.md  p7-cloud-runbook.md  p7-handoff-spec.md  p7b-colocated-control-runbook.md  p7b-runpod-official-runbook.md  private-weights-pcs.md  protocol-sketch.md  prototype-status.md  quantization-spec.md  r1-kimi3-handoff.md  r1-kimi3-report.md  r1b-delta-handoff.md  r1b-kimi3-report.md  scaling-note.md  t1-boundary-thinning-design.md  top-tier-positioning-2026-07-06.md  x0-moe-design.md  x123-harness-design.md  x4-folding-pcs-design.md
experiments/: README.md
lean/: Audit.lean  README.md  VoltaZk.lean  lake-manifest.json  lakefile.toml
rust/: Cargo.toml
rust/volta-accel/: Cargo.toml
rust/volta-accel/src/: cuda.rs  lib.rs
rust/volta-bench/: Cargo.toml
rust/volta-bench/benches/: p1_mac_epilogue.rs
rust/volta-bench/src/: lib.rs  logits_pack.rs  logup.rs
rust/volta-field/: Cargo.toml
rust/volta-field/src/: lib.rs
rust/volta-gpt2/: Cargo.toml
rust/volta-gpt2/examples/: dump_witness.rs
rust/volta-gpt2/src/: band.rs  config.rs  decode.rs  gemm.rs  layer.rs  lib.rs  luts.rs  model.rs  resident.rs
rust/volta-mac/: Cargo.toml
rust/volta-mac/src/: auth.rs  authed.rs  corr.rs  lib.rs  open.rs  transcript.rs
rust/volta-mac/tests/: e2e.rs
rust/volta-pcg/: Cargo.toml
rust/volta-pcg/src/: fase_d.rs  ggm.rs  lib.rs  phase_b.rs  production.rs
rust/volta-pcs/: Cargo.toml
rust/volta-pcs/src/: batch.rs  layer_layout.rs  lib.rs  ligero.rs  merkle.rs  ntt.rs
rust/volta-pcs/src/x4/: accounting.rs  artifacts.rs  artifacts_v4.rs  authenticated_output.rs  authenticated_output_v4.rs  folding.rs  folding_v4.rs  frame.rs  frame_v4.rs  manifest.rs  manifest_v4.rs  merkle.rs  merkle_v4.rs  mod.rs  ntt.rs  security_v4.rs
rust/volta-pcs/tests/: cuda.rs  p35.rs  p4_layer.rs
rust/volta-proto/: Cargo.toml
rust/volta-proto/src/: block_proof.rs  boundary_thinning.rs  ffn_schedule.rs  gemm_proof.rs  hadamard.rs  lib.rs  logup.rs  mle.rs  model_proof.rs  private_argmax.rs  prod_check.rs  schedule.rs  sumcheck_blind.rs  sumcheck_clear.rs  thaler.rs  wires.rs  x1_routing.rs  x2_moe.rs  x2_proof.rs  x3_ops.rs  x3_proof.rs
rust/volta-proto/src/logup/: batch.rs
scripts/: audit_lean.sh  budget_moe.py  budget_p0.py  build_cuda_backend.sh  cloud_bootstrap.sh  cloud_pull_results.sh  dump_golden.py  export_gpt2.py  gpt2_fixed.py  gpt2_float.py  p7_artifact_outputs.py  p7_gpu_blake3_merkle.py  p7_gpu_fused_epilogue.py  p7_gpu_logup_blind_rounds.py  p7_gpu_logup_rounds.py  p7_gpu_logup_tree.py  p7_gpu_native_inference.py  p7_gpu_pcs_arithmetic.py  p7_gpu_roofline.py  p7_shape_memory_sweep.py  p7b_chacha8_fp_diff.py  p7b_thunder_microbench.py  report.py  run_decode.sh  run_p7b_instrumentation_ab.sh  run_p7b_runpod_official.sh  run_prefill.sh  x123_export.py
tests/: test_artifact_outputs.py  test_audit_lean.py  test_budget_moe.py  test_p7b_chacha8_fp_diff.py  test_p7b_thunder_microbench.py  test_placeholder.py  test_report.py  test_shape_memory_sweep.py  test_x123_export.py
(+37 files in other folders)
