[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "volta-zk"
version = "0.0.0"
description = "Research scaffold for VOLE-opened transformer attestation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "okrame" }]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
