[workspace]
resolver = "2"
members = [
    "volta-field",
    "volta-pcg",
    "volta-mac",
    "volta-proto",
    "volta-gpt2",
    "volta-pcs",
    "volta-bench",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
volta-field = { path = "volta-field" }
volta-pcg = { path = "volta-pcg" }
volta-mac = { path = "volta-mac" }
volta-proto = { path = "volta-proto" }
volta-gpt2 = { path = "volta-gpt2" }
volta-pcs = { path = "volta-pcs" }
rand = "0.8"
blake3 = "1"
curve25519-dalek = "4"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
