[package]
name = "volta-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volta-field = { workspace = true }
volta-gpt2 = { workspace = true }
volta-mac = { workspace = true }
volta-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "p1_mac_epilogue"
harness = false
