[package]
name = "volta-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cuda = ["volta-accel/cuda", "volta-gpt2/cuda", "volta-proto/cuda", "volta-pcs/cuda"]

[dependencies]
volta-accel = { workspace = true }
volta-field = { workspace = true }
volta-gpt2 = { workspace = true }
volta-mac = { workspace = true }
volta-pcg = { workspace = true }
volta-proto = { workspace = true }
volta-pcs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "p1_mac_epilogue"
harness = false
