[package]
name = "volta-gpt2"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cuda = ["volta-accel/cuda"]

[dependencies]
blake3 = { workspace = true }
volta-accel = { workspace = true }
volta-field = { workspace = true }
rayon = { workspace = true }
