[package]
name = "volta-pcg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volta-field = { workspace = true }
blake3 = { workspace = true }
curve25519-dalek = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
