[package]
name = "volta-pcs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volta-field = { workspace = true }
volta-mac = { workspace = true }
volta-proto = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
