[package]
name = "volta-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
volta-field = { workspace = true }
volta-mac = { workspace = true }
volta-gpt2 = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
